syntax = "proto3";
package proto;

option go_package="github.com/kronos1209/learn-grpc-with-go/pkg/proto";
service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){};
}

message CreateUserRequest {
    string user_id = 1;
   string password = 2;
   string name = 3;
}

message CreateUserResponse {
    int64 account_id = 1;
}